[package]
name = "abp-gemini-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Google Gemini SDK adapter for Agent Backplane"
readme = "README.md"
keywords = ["agent", "backplane", "ai", "gemini", "google"]
categories = ["development-tools"]

[dependencies]
abp-core = { path = "../abp-core" }
abp-host = { path = "../abp-host" }
abp-integrations = { path = "../abp-integrations" }
abp-runtime = { path = "../abp-runtime" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
