[package]
name = "abp-gemini-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
abp-host = { path = "../abp-host" }
abp-integrations = { path = "../abp-integrations" }
abp-runtime = { path = "../abp-runtime" }
abp-which = { path = "../abp-which" }
anyhow.workspace = true
