[package]
name = "abp-gemini-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Google Gemini SDK adapter for Agent Backplane"
readme = "README.md"
keywords = ["agent", "backplane", "ai", "gemini", "google"]
categories = ["development-tools"]

[dependencies]
abp-core = { path = "../abp-core", version = "0.1.0" }
abp-runtime = { path = "../abp-runtime", version = "0.1.0" }
abp-sidecar-sdk = { path = "../abp-sidecar-sdk", version = "0.1.0" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
